<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            tools:text="@string/first_name"/>
        <TextView
            android:id="@+id/lv_txt_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/first_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            tools:text="@string/last_name"/>
        <TextView
            android:id="@+id/lv_txt_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/last_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            tools:text="@string/user_name"/>
        <TextView
            android:id="@+id/lv_txt_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/user_name"/>
    </LinearLayout>

</LinearLayout>